--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/ace7a2f0fb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Contact</title>
+    <title>Contact1</title>
   </head>
   <body>
     <header>
