--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <a href="./login.html">Brainwave.io</a>
       <div class="link">
-        <a href="./Home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./Pricing.html">Pricing</a>
         <a href="./Contact.html">Contact</a>
       </div>
