--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
           <a href="">Forgot password?</a>
         </div>
 
-        <a href="./Home.html" class="btn"> Login </a>
+        <a href="./index.html" class="btn"> Login </a>
         <div class="register-link">
           <p>Don't have an ACcount? <a href="">Register</a></p>
         </div>
