--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
     <header>
       <h1>Brainwave.io</h1>
       <div class="link">
-        <a href="./Home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./Pricing.html">Pricing</a>
         <a href="./Contact.html">Contact</a>
       </div>
